#Fix fixed the word wrapping Aidan found and changed back the colour

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -80,7 +80,7 @@ section {
     --navbar-colour: #2a2a2a;
     --background-colour-white: #ffffff;
     --skill-chip-colour: #add8e6;
-    --category-chip-colour: #e7f06c;
+    --category-chip-colour: lightcyan;
 }
 
 /*CSS relating to Header*/
@@ -1178,6 +1178,7 @@ section {
 .chipText{
     margin: auto;
     text-align: center;
+    word-break: break-word;
 }
 
 .chipDelete{
